argo/overlays/production/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-route
  namespace: argocd
spec:
  parentRefs:
    - name: external-http-gateway
      namespace: istio-ingress
  hostnames:
    - "argo.dudo.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: argocd-server
          port: 80
